--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<!--	CSS   -->
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+	<link rel="stylesheet" href="css/media-queries.css">
 	<link href="https://fonts.googleapis.com/css?family=Vampiro+One" rel="stylesheet">
 	<!-- SCRIPTS -->
 	<script src="js/jquery-3.1.1.min.js"></script>
