--- a/index.html
+++ b/index.html
@@ -17,51 +17,53 @@
 </head>
 
 <body>
-	<nav>
-		<div class="jumbotron">
-			<div class="logo">
-				<h1>Miranda_M.</h1>
-				<h5>Garden designer</h5> </div>
-			<div class="socialicons">
-				<div class="adress">
-					<p>Miranda Merr</p>
-					<p>2922 Birch Street, El Paso, TX 79901</p>
-					<p>915-726-1324 mirandam@garden.us</p>
-				</div>
-				<ul class="social">
-					<li><a href="#"><i class="ion-social-instagram-outline"></i></a></li>
-					<li><a href="#"><i class="ion-social-facebook-outline"></i></a></li>
-					<li><a href="#"><i class="ion-social-whatsapp-outline"></i></a></li>
-					<li><a href="#"><i class="ion-social-twitter-outline"></i></a></li>
-					<li><a href="#"><i class="ion-social-linkedin-outline"></i></a></li>
-				</ul>
-			</div>
-		</div>
-	</nav>
-	<div class="container">
-		<div class="row">
-			<div class="first">
-				<div class="firstrow">
-					<div class="block1"><i class="ion-bug"></i><span class="captions1"></span></div>
-					<div class="block1 blockcolor1"><i class="ion-ios-nutrition-outline"></i><span class="captions2"></span></div>
-				</div>
-				<div class="block2"><i class="ion-android-sunny"></i><span class="captions3"></span></div>
-			</div>
-			<div class="second">
-				<div class="block3"><i class="ion-images"></i><span class="captions2"></span></div>
-			</div>
-			<div class="third">
-				<div class="block2"><i class="ion-ios-flower"></i><span class="captions4"></span></div>
-				<div class="firstrow">
-					<div class="block1 blockcolor1"><i class="ion-leaf"></i><span class="captions5"></span></div>
-					<div class="block1 last"><i class="ion-happy-outline"></i><span class="captions6"></span></div>
+<div class="mainwindow">
+		<nav>
+			<div class="jumbotron">
+				<div class="logo">
+					<h1>Miranda_M.</h1>
+					<h5>Garden designer</h5> </div>
+				<div class="socialicons">
+					<div class="adress">
+						<p>Miranda Merr</p>
+						<p>2922 Birch Street, El Paso, TX 79901</p>
+						<p>915-726-1324 mirandam@garden.us</p>
+					</div>
+					<ul class="social">
+						<li><a href="#"><i class="ion-social-instagram-outline"></i></a></li>
+						<li><a href="#"><i class="ion-social-facebook-outline"></i></a></li>
+						<li><a href="#"><i class="ion-social-whatsapp-outline"></i></a></li>
+						<li><a href="#"><i class="ion-social-twitter-outline"></i></a></li>
+						<li><a href="#"><i class="ion-social-linkedin-outline"></i></a></li>
+					</ul>
 				</div>
 			</div>
+		</nav>
+		<div class="container">
+			<div class="row">
+				<div class="first">
+					<div class="firstrow">
+						<div class="block1 blockcolor off"><i class="ion-bug"></i><span class="captions1"></span></div>
+						<div class="block1 blockcolor1 off"><i class="ion-ios-nutrition-outline"></i><span class="captions2"></span></div>
+					</div>
+					<div class="block2 off"><i class="ion-android-sunny"></i><span class="captions3"></span></div>
+				</div>
+				<div class="second">
+					<div class="block3 off"><i class="ion-images"></i><span class="captions2"></span></div>
+				</div>
+				<div class="third">
+					<div class="block2 off"><i class="ion-ios-flower"></i><span class="captions4"></span></div>
+					<div class="firstrow">
+						<div class="block1 blockcolor1 off"><i class="ion-leaf"></i><span class="captions5"></span></div>
+						<div class="block1 last off"><i class="ion-happy-outline"></i><span class="captions6"></span></div>
+					</div>
+				</div>
+			</div>
+		<div class="row2">
+					<div id="map"></div>
+			</div>
+			<div class="footer">Copyright &#xA9; 2017 DaveDeveloper.De</div>
 		</div>
-	<div class="row2">
-				<div id="map"></div>
-		</div>
-		<div class="footer">Copyright &#xA9; 2017 DaveDeveloper.De</div>
 	</div>
 </body>
 
