--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 </head>
 
 <body>
-<div class="mainwindow">
+	<div class="mainwindow">
 		<nav>
 			<div class="jumbotron">
 				<div class="logo">
-					<h1>Miranda_M.</h1>
+					<h1><a href="index.html">Miranda_M.</a></h1>
 					<h5>Garden designer</h5> </div>
 				<div class="socialicons">
 					<div class="adress">
@@ -46,24 +46,181 @@
 						<div class="block1 blockcolor off"><i class="ion-bug"></i><span class="captions1"></span></div>
 						<div class="block1 blockcolor1 off"><i class="ion-ios-nutrition-outline"></i><span class="captions2"></span></div>
 					</div>
-					<div class="block2 off"><i class="ion-android-sunny"></i><span class="captions3"></span></div>
+					<div class="block2 off blockcolor3"><i class="ion-android-sunny"></i><span class="captions3"></span></div>
 				</div>
 				<div class="second">
 					<div class="block3 off"><i class="ion-images"></i><span class="captions2"></span></div>
 				</div>
 				<div class="third">
-					<div class="block2 off"><i class="ion-ios-flower"></i><span class="captions4"></span></div>
+					<div class="block2 off blockcolor54"><i class="ion-ios-flower"></i><span class="captions4"></span></div>
 					<div class="firstrow">
-						<div class="block1 blockcolor1 off"><i class="ion-leaf"></i><span class="captions5"></span></div>
-						<div class="block1 last off"><i class="ion-happy-outline"></i><span class="captions6"></span></div>
+						<div class="block1 blockcolor5 off"><i class="ion-leaf"></i><span class="captions5"></span></div>
+						<div class="block1 last off blockcolor12"><i class="ion-happy-outline"></i><span class="captions6"></span></div>
 					</div>
 				</div>
 			</div>
-		<div class="row2">
-					<div id="map"></div>
+			<div class="row2">
+				<div id="map"></div>
 			</div>
 			<div class="footer">Copyright &#xA9; 2017 DaveDeveloper.De</div>
 		</div>
+		<!--			END OF HOME PAGE     -->
+		<!--	ABOUT ME  -->
+		<div class="wrapper off2">
+			<div class="quotes">
+				<h2>ABOUT ME</h2>
+				<div class="quote"><cite>"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi vitae, non incidunt architecto quod deserunt molestias porro, maxime doloribus voluptatibus <mark>quaerat blanditiis nostrum</mark>, facere expedita ratione. Consequatur accusamus eligendi harum consectetur est amet, molestiae distinctio ullam nostrum, debitis quod quidem. Impedit cumque architecto, assumenda explicabo excepturi expedita cum, asperiores officiis quidem iure facere, temporibus quam."</cite></div>
+				<div class="author"><img src="img/miranda.jpg" alt="">
+					<p>Miranda Merr,
+						<br>General Director</p>
+				</div>
+			</div>
+			<div class="separator"> <i class="ion-ios-circle-filled"></i> <i class="ion-ios-circle-filled"></i> <i class="ion-ios-circle-filled"></i> </div>
+			<div class="factors">
+				<div class="factor">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum debitis, quam doloribus ducimus explicabo sint inventore voluptatum quis illum incidunt accusamus libero autem reiciendis nostrum, eum nisi alias vitae praesentium dolorum sequi aspernatur quia laudantium odio nemo. Quidem vitae porro laboriosam, ullam ipsa, obcaecati nostrum non.</div>
+				<div class="factor">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, ad, aliquam! Accusamus eaque minima, harum, nam voluptatum adipisci tempore explicabo animi rem dignissimos dolorum pariatur, doloribus error omnis eos vel, libero enim quae in reiciendis esse! Odio neque, quam. Numquam vero optio perspiciatis. Doloremque, quisquam, nam.</div>
+			</div>
+			<div class="buttons2"><i class="ion-bug ion-bug2"></i><i class="ion-arrow-left-c"></i></div>
+		</div>
+		<!--		END OF ABOUT ME  -->
+		<!-- TEAM	-->
+		<div class="wrapper2 off2">
+			<div class="title">
+				<h2>OUR TEAM</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos quaerat minus, vitae culpa doloribus debitis perferendis? Iste nostrum amet ratione dolores sapiente esse, tempore, corporis ipsa nam obcaecati labore libero quae aut doloremque est, necessitatibus! Fugit, obcaecati. Quasi assumenda facere dicta omnis cum hic, sint inventore repudiandae quam enim! Corporis facilis expedita, eveniet consequuntur tempore.</p>
+			</div>
+			<div class="team">
+				<div class="photo"><img src="img/esprit-1.jpg" alt="">
+					<h4>Monica Smith</h4>
+					<h5>Gardener</h5></div>
+				<div class="description">
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat sunt a illum ipsa ea delectus ipsum assumenda alias unde. Perspiciatis ipsa ad illo molestiae quos, quam recusandae quia minima debitis.</p>
+				</div>
+				<div class="photo"><img src="img/esprit-1.jpg" alt="">
+					<h4>Monica Smith</h4>
+					<h5>Gardener</h5></div>
+				<div class="photo"><img src="img/esprit-1.jpg" alt="">
+					<h4>Monica Smith</h4>
+					<h5>Gardener</h5></div>
+			</div>
+			<div class="description">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat sunt a illum ipsa ea delectus ipsum assumenda alias unde. Perspiciatis ipsa ad illo molestiae quos, quam recusandae quia minima debitis.</p>
+			</div>
+			<div class="buttons2"><i class="ion-bug ion-bug2"></i><i class="ion-arrow-left-c"></i></div>
+		</div>
+	</div>
+	<!-- END OF TEAM	-->
+	<!-- CONTACT	-->
+	<div class="wrapper3 off2">
+		<div class="title">
+			<h2>CONTACT</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos quaerat minus, vitae culpa doloribus debitis perferendis? Iste nostrum amet ratione dolores sapiente esse, tempore, corporis ipsa nam obcaecati labore libero quae aut doloremque est, necessitatibus! Fugit, obcaecati. Quasi assumenda facere dicta omnis cum hic, sint inventore repudiandae quam enim! Corporis facilis expedita, eveniet consequuntur tempore.</p>
+		</div>
+		<div class="form">
+			<form>
+				<div class="float">
+					<input type="e-mail" name="email" placeholder="Your E-mail">
+					<input type="text" name="name" placeholder="Your Name"> </div>
+				<input type="text" name="subject" class="subject" placeholder="Subject" rows="200">
+				<textarea name="field5" id="field5" class="field-long field-textarea"></textarea>
+				<input type="submit" value="Wyślij"> </form>
+		</div>
+		<div class="description">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat sunt a illum ipsa ea delectus ipsum assumenda alias unde. Perspiciatis ipsa ad illo molestiae quos, quam recusandae quia minima debitis.</p>
+		</div>
+		<div class="buttons2"><i class="ion-bug ion-bug2"></i><i class="ion-arrow-left-c"></i></div>
+	</div>
+	<!-- END OF CONTACT	-->
+	<!-- EXPERIENCE	-->
+	<div class="wrapper4 off2">
+		<div class="quotes quotes2">
+			<h2>EXPERIENCE</h2>
+			<div class="factors">
+				<div class="factor">
+					<h3>Trees and Flowers inc.</h3>
+					<h4>2011-2014</h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum debitis, quam doloribus ducimus explicabo sint inventore voluptatum quis illum incidunt accusamus libero autem reiciendis nostrum, eum nisi alias vitae praesentium dolorum sequi aspernatur quia laudantium odio nemo. Quidem vitae porro laboriosam, ullam ipsa, obcaecati nostrum non.</div>
+				<div class="factor">
+					<h3>Trees and Flowers inc.</h3>
+					<h4>2011-2014</h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, ad, aliquam! Accusamus eaque minima, harum, nam voluptatum adipisci tempore explicabo animi rem dignissimos dolorum pariatur, doloribus error omnis eos vel, libero enim quae in reiciendis esse! Odio neque, quam. Numquam vero optio perspiciatis. Doloremque, quisquam, nam.</div>
+			</div>
+		</div>
+		<div class="separator"> <i class="ion-ios-circle-filled"></i> <i class="ion-ios-circle-filled"></i> <i class="ion-ios-circle-filled"></i> </div>
+		<div class="factors">
+			<div class="factor">
+				<h3>Trees and Flowers inc.</h3>
+				<h4>2011-2014</h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum debitis, quam doloribus ducimus explicabo sint inventore voluptatum quis illum incidunt accusamus libero autem reiciendis nostrum, eum nisi alias vitae praesentium dolorum sequi aspernatur quia laudantium odio nemo. Quidem vitae porro laboriosam, ullam ipsa, obcaecati nostrum non.</div>
+			<div class="factor">
+				<h3>Trees and Flowers inc.</h3>
+				<h4>2011-2014</h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, ad, aliquam! Accusamus eaque minima, harum, nam voluptatum adipisci tempore explicabo animi rem dignissimos dolorum pariatur, doloribus error omnis eos vel, libero enim quae in reiciendis esse! Odio neque, quam. Numquam vero optio perspiciatis. Doloremque, quisquam, nam.</div>
+		</div>
+		<div class="buttons2"><i class="ion-bug ion-bug2"></i><i class="ion-arrow-left-c"></i></div>
+	</div>
+	<!-- END OF EXPERIENCE	-->
+	<!-- PRICING TABLE	-->
+	<div class="wrapper5 off2">
+		<div class="quotes quotes2">
+			<h2>PRICING TABLE</h2>
+			<div class="wrap22">
+				<div class="table">
+					<ul>
+						<li>
+							<div class="top">
+								<h1>STARTER</h1>
+								<div class="circle">$19</div>
+							</div>
+							<div class="bottom">
+								<p><span>5</span> users</p>
+								<p><span>10</span> projects</p>
+								<p><span>10GB</span> amount of space</p>
+								<p><span>5</span> e-mail accounts</p>
+								<div class="sign"> <a href='#' class='button3'>SIGN UP</a> </div>
+							</div>
+						</li>
+						<li>
+							<div class="top">
+								<h1>BASIC</h1>
+								<div class="circle">$29</div>
+							</div>
+							<div class="bottom">
+								<p><span>10</span> users</p>
+								<p><span>50</span> projects</p>
+								<p><span>50GB</span> amount of space</p>
+								<p><span>10</span> e-mail accounts</p>
+								<div class="sign"> <a href='#' class='button3'>SIGN UP</a> </div>
+							</div>
+						</li>
+						<li>
+							<div class="top purple white">
+								<h1>PRO</h1>
+								<div class="circle pink">$49</div>
+							</div>
+							<div class="bottom">
+								<p><span>100</span> users</p>
+								<p><span>Unlimited</span> projects</p>
+								<p><span>1TB</span> amount of space</p>
+								<p><span>100</span> e-mail accounts</p>
+								<div class="sign"> <a href='#' class="button3 purple" style="color:white;">SIGN UP</a> </div>
+							</div>
+						</li>
+						<li>
+							<div class="top">
+								<h1>ULTRA</h1>
+								<div class="circle">$99</div>
+							</div>
+							<div class="bottom">
+								<p><span>Unlimited</span> users</p>
+								<p><span>Unlimited</span> projects</p>
+								<p><span>Unlimited</span> amount of space</p>
+								<p><span>Unlimited</span> e-mail accounts</p>
+								<div class="sign"> <a href='#' class='button3'>SIGN UP</a> </div>
+							</div>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<div class="buttons2"><i class="ion-bug ion-bug2"></i><i class="ion-arrow-left-c"></i></div>
+		</div>
+		<!-- END OF PRICING TABLE	-->
 	</div>
 </body>
 
