--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 					<div class="block2 off blockcolor3"><i class="ion-android-sunny"></i><span class="captions3"></span></div>
 				</div>
 				<div class="second">
-					<div class="block3 off"><i class="ion-images"></i><span class="captions2"></span></div>
+					<div class="block3 blockcolor66 off"><i class="ion-images"></i><span class="captions2"></span></div>
 				</div>
 				<div class="third">
 					<div class="block2 off blockcolor54"><i class="ion-ios-flower"></i><span class="captions4"></span></div>
@@ -66,7 +66,7 @@
 		</div>
 		<!--			END OF HOME PAGE     -->
 		<!--	ABOUT ME  -->
-		<div class="wrapper off2">
+		<div class="wrapper slide off2">
 			<div class="quotes">
 				<h2>ABOUT ME</h2>
 				<div class="quote"><cite>"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi vitae, non incidunt architecto quod deserunt molestias porro, maxime doloribus voluptatibus <mark>quaerat blanditiis nostrum</mark>, facere expedita ratione. Consequatur accusamus eligendi harum consectetur est amet, molestiae distinctio ullam nostrum, debitis quod quidem. Impedit cumque architecto, assumenda explicabo excepturi expedita cum, asperiores officiis quidem iure facere, temporibus quam."</cite></div>
@@ -80,11 +80,12 @@
 				<div class="factor">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum debitis, quam doloribus ducimus explicabo sint inventore voluptatum quis illum incidunt accusamus libero autem reiciendis nostrum, eum nisi alias vitae praesentium dolorum sequi aspernatur quia laudantium odio nemo. Quidem vitae porro laboriosam, ullam ipsa, obcaecati nostrum non.</div>
 				<div class="factor">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, ad, aliquam! Accusamus eaque minima, harum, nam voluptatum adipisci tempore explicabo animi rem dignissimos dolorum pariatur, doloribus error omnis eos vel, libero enim quae in reiciendis esse! Odio neque, quam. Numquam vero optio perspiciatis. Doloremque, quisquam, nam.</div>
 			</div>
+
 			<div class="buttons2"><i class="ion-bug ion-bug2"></i><i class="ion-arrow-left-c"></i></div>
 		</div>
 		<!--		END OF ABOUT ME  -->
 		<!-- TEAM	-->
-		<div class="wrapper2 off2">
+		<div class="wrapper2 slide off2">
 			<div class="title">
 				<h2>OUR TEAM</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos quaerat minus, vitae culpa doloribus debitis perferendis? Iste nostrum amet ratione dolores sapiente esse, tempore, corporis ipsa nam obcaecati labore libero quae aut doloremque est, necessitatibus! Fugit, obcaecati. Quasi assumenda facere dicta omnis cum hic, sint inventore repudiandae quam enim! Corporis facilis expedita, eveniet consequuntur tempore.</p>
@@ -110,8 +111,97 @@
 		</div>
 	</div>
 	<!-- END OF TEAM	-->
+	<!-- GALLERY	-->
+	<div class="wrapper6 slide off2">
+
+	<div id="gal">
+		<h2>
+			GALLERY
+		</h2>
+		<div class="center">
+			<ul>
+				<li>
+					<img src="img/negativespace1-41.jpg" width="100" height="100" /><img src="img/negativespace1-41.jpg" class="img" /><figcaption>Fot. Author</figcaption>
+				</li>
+				<li>
+					<img src="img/negativespace1-41.jpg" width="100" height="100" /><img src="img/negativespace1-41.jpg" class="img" /><figcaption>Fot. Author</figcaption>
+				</li>
+				<li>
+					<img src="img/negativespace1-41.jpg" width="100" height="100" /><img src="img/negativespace1-41.jpg" class="img" /><figcaption>Fot. Author</figcaption>
+				</li>
+				<li>
+					<img src="img/negativespace1-41.jpg" width="100" height="100" /><img src="img/negativespace1-41.jpg" class="img" /><figcaption>Fot. Author</figcaption>
+				</li>
+				<li>
+					<img src="img/negativespace1-41.jpg" width="100" height="100" /><img src="img/negativespace1-41.jpg" class="img" /><figcaption>Fot. Author</figcaption>
+				</li>
+			</ul>
+			<ul>
+				<li>
+					<img src="img/negativespace1-41.jpg" width="100" height="100" /><img src="img/negativespace1-41.jpg" class="img" /><figcaption>Fot. Author</figcaption>
+				</li>
+				<li>
+					<img src="img/negativespace1-41.jpg" width="100" height="100" /><img src="img/negativespace1-41.jpg" class="img" /><figcaption>Fot. Author</figcaption>
+				</li>
+				<li>
+					<img src="img/negativespace1-41.jpg" width="100" height="100" /><img src="img/negativespace1-41.jpg" class="img" /><figcaption>Fot. Author</figcaption>
+				</li>
+				<li>
+					<img src="img/negativespace1-41.jpg" width="100" height="100" /><img src="img/negativespace1-41.jpg" class="img" /><figcaption>Fot. Author</figcaption>
+				</li>
+				<li>
+					<img src="img/negativespace1-41.jpg" width="100" height="100" /><img src="img/negativespace1-41.jpg" class="img" /><figcaption>Fot. Author</figcaption>
+				</li>
+
+			</ul>
+			</div>
+		</div>
+	<div class="buttons2"><i class="ion-bug ion-bug2"></i><i class="ion-arrow-left-c"></i></div>
+</div>
+
+
+
+
+
+
+
+
+
+	<!-- END OF GALLERY	-->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 	<!-- CONTACT	-->
-	<div class="wrapper3 off2">
+	<div class="wrapper3 slide off2">
 		<div class="title">
 			<h2>CONTACT</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos quaerat minus, vitae culpa doloribus debitis perferendis? Iste nostrum amet ratione dolores sapiente esse, tempore, corporis ipsa nam obcaecati labore libero quae aut doloremque est, necessitatibus! Fugit, obcaecati. Quasi assumenda facere dicta omnis cum hic, sint inventore repudiandae quam enim! Corporis facilis expedita, eveniet consequuntur tempore.</p>
@@ -132,24 +222,22 @@
 	</div>
 	<!-- END OF CONTACT	-->
 	<!-- EXPERIENCE	-->
-	<div class="wrapper4 off2">
-		<div class="quotes quotes2">
+	<div class="wrapper4 column slide off2">
 			<h2>EXPERIENCE</h2>
-			<div class="factors">
-				<div class="factor">
+			<div class="factors2">
+				<div class="factor2">
 					<h3>Trees and Flowers inc.</h3>
 					<h4>2011-2014</h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum debitis, quam doloribus ducimus explicabo sint inventore voluptatum quis illum incidunt accusamus libero autem reiciendis nostrum, eum nisi alias vitae praesentium dolorum sequi aspernatur quia laudantium odio nemo. Quidem vitae porro laboriosam, ullam ipsa, obcaecati nostrum non.</div>
-				<div class="factor">
+				<div class="factor2">
 					<h3>Trees and Flowers inc.</h3>
 					<h4>2011-2014</h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, ad, aliquam! Accusamus eaque minima, harum, nam voluptatum adipisci tempore explicabo animi rem dignissimos dolorum pariatur, doloribus error omnis eos vel, libero enim quae in reiciendis esse! Odio neque, quam. Numquam vero optio perspiciatis. Doloremque, quisquam, nam.</div>
 			</div>
-		</div>
 		<div class="separator"> <i class="ion-ios-circle-filled"></i> <i class="ion-ios-circle-filled"></i> <i class="ion-ios-circle-filled"></i> </div>
-		<div class="factors">
-			<div class="factor">
+		<div class="factors2">
+			<div class="factor2">
 				<h3>Trees and Flowers inc.</h3>
 				<h4>2011-2014</h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum debitis, quam doloribus ducimus explicabo sint inventore voluptatum quis illum incidunt accusamus libero autem reiciendis nostrum, eum nisi alias vitae praesentium dolorum sequi aspernatur quia laudantium odio nemo. Quidem vitae porro laboriosam, ullam ipsa, obcaecati nostrum non.</div>
-			<div class="factor">
+			<div class="factor2">
 				<h3>Trees and Flowers inc.</h3>
 				<h4>2011-2014</h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, ad, aliquam! Accusamus eaque minima, harum, nam voluptatum adipisci tempore explicabo animi rem dignissimos dolorum pariatur, doloribus error omnis eos vel, libero enim quae in reiciendis esse! Odio neque, quam. Numquam vero optio perspiciatis. Doloremque, quisquam, nam.</div>
 		</div>
@@ -157,7 +245,7 @@
 	</div>
 	<!-- END OF EXPERIENCE	-->
 	<!-- PRICING TABLE	-->
-	<div class="wrapper5 off2">
+	<div class="wrapper5 slide off2">
 		<div class="quotes quotes2">
 			<h2>PRICING TABLE</h2>
 			<div class="wrap22">
