--- a/index.html
+++ b/index.html
@@ -80,7 +80,6 @@
 				<div class="factor">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum debitis, quam doloribus ducimus explicabo sint inventore voluptatum quis illum incidunt accusamus libero autem reiciendis nostrum, eum nisi alias vitae praesentium dolorum sequi aspernatur quia laudantium odio nemo. Quidem vitae porro laboriosam, ullam ipsa, obcaecati nostrum non.</div>
 				<div class="factor">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, ad, aliquam! Accusamus eaque minima, harum, nam voluptatum adipisci tempore explicabo animi rem dignissimos dolorum pariatur, doloribus error omnis eos vel, libero enim quae in reiciendis esse! Odio neque, quam. Numquam vero optio perspiciatis. Doloremque, quisquam, nam.</div>
 			</div>
-
 			<div class="buttons2"><i class="ion-bug ion-bug2"></i><i class="ion-arrow-left-c"></i></div>
 		</div>
 		<!--		END OF ABOUT ME  -->
@@ -113,93 +112,50 @@
 	<!-- END OF TEAM	-->
 	<!-- GALLERY	-->
 	<div class="wrapper6 slide off2">
-
-	<div id="gal">
-		<h2>
+		<div id="gal">
+			<h2>
 			GALLERY
 		</h2>
-		<div class="center">
-			<ul>
-				<li>
-					<img src="img/negativespace1-41.jpg" width="100" height="100" /><img src="img/negativespace1-41.jpg" class="img" /><figcaption>Fot. Author</figcaption>
-				</li>
-				<li>
-					<img src="img/negativespace1-41.jpg" width="100" height="100" /><img src="img/negativespace1-41.jpg" class="img" /><figcaption>Fot. Author</figcaption>
-				</li>
-				<li>
-					<img src="img/negativespace1-41.jpg" width="100" height="100" /><img src="img/negativespace1-41.jpg" class="img" /><figcaption>Fot. Author</figcaption>
-				</li>
-				<li>
-					<img src="img/negativespace1-41.jpg" width="100" height="100" /><img src="img/negativespace1-41.jpg" class="img" /><figcaption>Fot. Author</figcaption>
-				</li>
-				<li>
-					<img src="img/negativespace1-41.jpg" width="100" height="100" /><img src="img/negativespace1-41.jpg" class="img" /><figcaption>Fot. Author</figcaption>
-				</li>
-			</ul>
-			<ul>
-				<li>
-					<img src="img/negativespace1-41.jpg" width="100" height="100" /><img src="img/negativespace1-41.jpg" class="img" /><figcaption>Fot. Author</figcaption>
-				</li>
-				<li>
-					<img src="img/negativespace1-41.jpg" width="100" height="100" /><img src="img/negativespace1-41.jpg" class="img" /><figcaption>Fot. Author</figcaption>
-				</li>
-				<li>
-					<img src="img/negativespace1-41.jpg" width="100" height="100" /><img src="img/negativespace1-41.jpg" class="img" /><figcaption>Fot. Author</figcaption>
-				</li>
-				<li>
-					<img src="img/negativespace1-41.jpg" width="100" height="100" /><img src="img/negativespace1-41.jpg" class="img" /><figcaption>Fot. Author</figcaption>
-				</li>
-				<li>
-					<img src="img/negativespace1-41.jpg" width="100" height="100" /><img src="img/negativespace1-41.jpg" class="img" /><figcaption>Fot. Author</figcaption>
-				</li>
-
-			</ul>
+			<div class="center">
+				<ul>
+					<li> <img src="img/negativespace1-41.jpg" width="100" height="100" /><img src="img/negativespace1-41.jpg" class="img" />
+						<figcaption>Fot. Author</figcaption>
+					</li>
+					<li> <img src="img/negativespace1-41.jpg" width="100" height="100" /><img src="img/negativespace1-41.jpg" class="img" />
+						<figcaption>Fot. Author</figcaption>
+					</li>
+					<li> <img src="img/negativespace1-41.jpg" width="100" height="100" /><img src="img/negativespace1-41.jpg" class="img" />
+						<figcaption>Fot. Author</figcaption>
+					</li>
+					<li> <img src="img/negativespace1-41.jpg" width="100" height="100" /><img src="img/negativespace1-41.jpg" class="img" />
+						<figcaption>Fot. Author</figcaption>
+					</li>
+					<li> <img src="img/negativespace1-41.jpg" width="100" height="100" /><img src="img/negativespace1-41.jpg" class="img" />
+						<figcaption>Fot. Author</figcaption>
+					</li>
+				</ul>
+				<ul>
+					<li> <img src="img/negativespace1-41.jpg" width="100" height="100" /><img src="img/negativespace1-41.jpg" class="img" />
+						<figcaption>Fot. Author</figcaption>
+					</li>
+					<li> <img src="img/negativespace1-41.jpg" width="100" height="100" /><img src="img/negativespace1-41.jpg" class="img" />
+						<figcaption>Fot. Author</figcaption>
+					</li>
+					<li> <img src="img/negativespace1-41.jpg" width="100" height="100" /><img src="img/negativespace1-41.jpg" class="img" />
+						<figcaption>Fot. Author</figcaption>
+					</li>
+					<li> <img src="img/negativespace1-41.jpg" width="100" height="100" /><img src="img/negativespace1-41.jpg" class="img" />
+						<figcaption>Fot. Author</figcaption>
+					</li>
+					<li> <img src="img/negativespace1-41.jpg" width="100" height="100" /><img src="img/negativespace1-41.jpg" class="img" />
+						<figcaption>Fot. Author</figcaption>
+					</li>
+				</ul>
 			</div>
 		</div>
-	<div class="buttons2"><i class="ion-bug ion-bug2"></i><i class="ion-arrow-left-c"></i></div>
-</div>
-
-
-
-
-
-
-
-
-
+		<div class="buttons2"><i class="ion-bug ion-bug2"></i><i class="ion-arrow-left-c"></i></div>
+	</div>
 	<!-- END OF GALLERY	-->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 	<!-- CONTACT	-->
 	<div class="wrapper3 slide off2">
 		<div class="title">
@@ -223,15 +179,15 @@
 	<!-- END OF CONTACT	-->
 	<!-- EXPERIENCE	-->
 	<div class="wrapper4 column slide off2">
-			<h2>EXPERIENCE</h2>
-			<div class="factors2">
-				<div class="factor2">
-					<h3>Trees and Flowers inc.</h3>
-					<h4>2011-2014</h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum debitis, quam doloribus ducimus explicabo sint inventore voluptatum quis illum incidunt accusamus libero autem reiciendis nostrum, eum nisi alias vitae praesentium dolorum sequi aspernatur quia laudantium odio nemo. Quidem vitae porro laboriosam, ullam ipsa, obcaecati nostrum non.</div>
-				<div class="factor2">
-					<h3>Trees and Flowers inc.</h3>
-					<h4>2011-2014</h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, ad, aliquam! Accusamus eaque minima, harum, nam voluptatum adipisci tempore explicabo animi rem dignissimos dolorum pariatur, doloribus error omnis eos vel, libero enim quae in reiciendis esse! Odio neque, quam. Numquam vero optio perspiciatis. Doloremque, quisquam, nam.</div>
-			</div>
+		<h2>EXPERIENCE</h2>
+		<div class="factors2">
+			<div class="factor2">
+				<h3>Trees and Flowers inc.</h3>
+				<h4>2011-2014</h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum debitis, quam doloribus ducimus explicabo sint inventore voluptatum quis illum incidunt accusamus libero autem reiciendis nostrum, eum nisi alias vitae praesentium dolorum sequi aspernatur quia laudantium odio nemo. Quidem vitae porro laboriosam, ullam ipsa, obcaecati nostrum non.</div>
+			<div class="factor2">
+				<h3>Trees and Flowers inc.</h3>
+				<h4>2011-2014</h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, ad, aliquam! Accusamus eaque minima, harum, nam voluptatum adipisci tempore explicabo animi rem dignissimos dolorum pariatur, doloribus error omnis eos vel, libero enim quae in reiciendis esse! Odio neque, quam. Numquam vero optio perspiciatis. Doloremque, quisquam, nam.</div>
+		</div>
 		<div class="separator"> <i class="ion-ios-circle-filled"></i> <i class="ion-ios-circle-filled"></i> <i class="ion-ios-circle-filled"></i> </div>
 		<div class="factors2">
 			<div class="factor2">
@@ -259,8 +215,8 @@
 							<div class="bottom">
 								<p><span>5</span> users</p>
 								<p><span>10</span> projects</p>
-								<p><span>10GB</span> amount of space</p>
-								<p><span>5</span> e-mail accounts</p>
+								<p><span>10</span> amount of</p>
+								<p><span>5</span> lorem ipsum</p>
 								<div class="sign"> <a href='#' class='button3'>SIGN UP</a> </div>
 							</div>
 						</li>
@@ -272,8 +228,8 @@
 							<div class="bottom">
 								<p><span>10</span> users</p>
 								<p><span>50</span> projects</p>
-								<p><span>50GB</span> amount of space</p>
-								<p><span>10</span> e-mail accounts</p>
+								<p><span>50</span> amount of</p>
+								<p><span>10</span> lorem ipsum</p>
 								<div class="sign"> <a href='#' class='button3'>SIGN UP</a> </div>
 							</div>
 						</li>
@@ -284,9 +240,9 @@
 							</div>
 							<div class="bottom">
 								<p><span>100</span> users</p>
-								<p><span>Unlimited</span> projects</p>
-								<p><span>1TB</span> amount of space</p>
-								<p><span>100</span> e-mail accounts</p>
+								<p><span>Unlimited</span></p>
+								<p><span>1</span> amount of</p>
+								<p><span>100</span> lorem ipsum</p>
 								<div class="sign"> <a href='#' class="button3 purple" style="color:white;">SIGN UP</a> </div>
 							</div>
 						</li>
@@ -296,10 +252,10 @@
 								<div class="circle">$99</div>
 							</div>
 							<div class="bottom">
-								<p><span>Unlimited</span> users</p>
-								<p><span>Unlimited</span> projects</p>
-								<p><span>Unlimited</span> amount of space</p>
-								<p><span>Unlimited</span> e-mail accounts</p>
+								<p><span>100</span> users</p>
+								<p><span>Unlimited</span></p>
+								<p><span>1</span> amount of space</p>
+								<p><span>100</span> lorem ipsum</p>
 								<div class="sign"> <a href='#' class='button3'>SIGN UP</a> </div>
 							</div>
 						</li>
