--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
       <!-- END OF PRICING TABLE	-->
    </div>
    <!--	GALLERY 1 -->
-   <!--
+
    <div class="off3 wrapper7">
 
 
@@ -309,7 +309,7 @@
 
 
 
---></div>
+</div>
    <!-- END OF GALLERY 1 -->
    <!-- SCRIPTS -->
    <script src="js/jquery-3.1.1.min.js"></script>
