--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
    <!-- SCRIPTS -->
    <script src="js/jquery-3.1.1.min.js"></script>
    <script src="js/jQuery.js"></script>
-   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
+   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD__5V4Alpsok-i4prz1OVsNGU4XzmqlEs"></script>
    <script src="js/map.js"></script>
    <meta name="viewport" content="width=device-width,initial-scale=1">
    <!-- FlexSlider pieces -->
